--- a/src/sass/base/_form-elements.sass
+++ b/src/sass/base/_form-elements.sass
@@ -190,13 +190,13 @@ input[type="text"], input[type="password"], input[type="email"], input[type="sea
 		float: none
 		position: absolute
 		top: round($form-input-height*0.5)
-		margin: -#{round($this-icon-size*0.5)} 0 0 #{round(($text-layout-space - $this-icon-size)*0.1)}
+		margin: -#{round($this-icon-size*0.5)} 0 0 #{round(((nth($text-layout-space, 2)) - $this-icon-size)*0.1)}
 
 	+media('<tab-lg')
-		margin-left: #{round(($text-layout-space--md - $this-icon-size)*0.1)}
+		margin-left: #{round(((nth($text-layout-space--md, 2)) - $this-icon-size)*0.1)}
 
 	+media('<tab-sm')
-		margin-left: #{round(($text-layout-space--sm - $this-icon-size)*0.1)}
+		margin-left: #{round(((nth($text-layout-space--sm, 2)) - $this-icon-size)*0.1)}
 
 	// нужно выбрать тольк ближайший элемент подтверждения формы ((нельзя использовать ~))
 	form .success + .error-note + &,
