--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,7 +20,7 @@
 /*======================================================*/
 /* NORMALIZE AND RESET
 /*======================================================*/
-@import base/normalize.min
+@import ../_temp/normalize/import-now
 @import base/reset
 @import base/oldie
 @import base/nojs
