--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -92,21 +92,22 @@ $user-content: user-content !default
 
 // =======Layout========
 // отступы слева и справа для всего сайта
-$page-layout-space: 20px !default
+$page-layout-space: 18px 20px !default // v h
 // максимальная ширина сайта
 $page-layout-width: 1920px !default
 // минимальные отступы слева и справа у текствого блока
-$text-layout-space: 60px !default
-$text-layout-space--md: 30px !default
-$text-layout-space--sm: 15px !default
+$text-layout-space: 50px 60px !default // v h
+$text-layout-space--md: 25px 30px !default // v h
+$text-layout-space--sm: 13px 15px !default // v h
+$text-layout-space--mob: 8px 10px !default // v h
 // максимальная ширина текстового блока
 $text-layout-width: 800px !default
 // максимальная ширина текстового блока выходящего за пределы текста
 $flood-layout-width: 1000px !default
 // отступы внутри блочных элементов
-$grid-space: 30px !default
-$grid-space--lg: 20px !default
-$grid-space--sm: 10px !default
+$grid-space: 28px 30px !default // v h
+$grid-space--lg: 18px 20px !default // v h
+$grid-space--sm: 8px 10px !default // v h
 // отступы в дефолтных списках
 $list-space: 30px
 
