--- a/src/sass/components/_components.sass
+++ b/src/sass/components/_components.sass
@@ -13,7 +13,7 @@
 
 .user-form
 	background: $bg-color-alt
-	+padding-vertical($text-layout-space)
+	+padding-vertical((nth($text-layout-space, 1)))
 	margin-bottom: $bottom-space
 	border: solid $border-color
 	border-width: 1px 0
@@ -22,10 +22,10 @@
 		margin-bottom: 0
 
 	+media('<tab-lg')
-		+padding-vertical($text-layout-space--md)
+		+padding-vertical((nth($text-layout-space--md, 1)))
 
 	+media('<mob-lg')
-		+padding-vertical($text-layout-space--sm)
+		+padding-vertical((nth($text-layout-space--sm, 1)))
 
 	form
 		display: block
