--- a/src/sass/test-mixins.sass
+++ b/src/sass/test-mixins.sass
@@ -7,13 +7,13 @@
 
 .mx-test .content
 	margin: 0 0 0 300px
-	+padding-vertical($text-layout-space)
+	+padding-vertical(nth($text-layout-space, 1))
 
 .mx-test .sidebar
 	width: 260px
 
 .mx-test .layout-text
-	+padding-horizontal($text-layout-space)
+	+padding-horizontal(nth($text-layout-space, 2))
 
 .mx-test .section
 	margin-bottom: $bottom-space--lg
