--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -91,11 +91,11 @@ $mark-color: tomato !default
 $user-content: user-content !default
 
 // =======Layout========
-// отступы слева и справа для всего сайта
+// отступы для всего сайта
 $page-layout-space: 18px 20px !default // v h
 // максимальная ширина сайта
 $page-layout-width: 1920px !default
-// минимальные отступы слева и справа у текствого блока
+// минимальные отступы у текствого блока
 $text-layout-space: 50px 60px !default // v h
 $text-layout-space--md: 25px 30px !default // v h
 $text-layout-space--sm: 13px 15px !default // v h
@@ -118,7 +118,7 @@ $sidebar-width: 260px !default
 $aside-width: 160px !default
 
 // footer
-$footer-grid-space: 30px !default
+$footer-grid-space: 30px 0 !default // v h
 
 // =======Form========
 $form-text-color: $text-color !default
@@ -157,7 +157,6 @@ $btn-text-color: white !default
 $btn-disabled-color: #ccc !default
 
 // =========Animation=========
-$animation-use: false !default
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
 
