--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,7 +20,10 @@
 /*======================================================*/
 /* NORMALIZE AND RESET
 /*======================================================*/
+// normalize
 @import ../_temp/normalize/import-now
+// normalize meyer css reset
+//@import base/_reset-meyer.sass
 @import base/reset
 @import base/oldie
 @import base/nojs
