--- a/src/sass/fonts/_fonts.sass
+++ b/src/sass/fonts/_fonts.sass
@@ -3,7 +3,7 @@
 // =============================================================================
 // Google Fonts
 // =============================================================================
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,400i,700,700i&subset=cyrillic')
+//@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,400i,700,700i&subset=cyrillic')
 
 // =============================================================================
 // Font Face
