--- a/src/sass/base/_form-elements.sass
+++ b/src/sass/base/_form-elements.sass
@@ -547,7 +547,7 @@ input[type="radio"]
 		right: 22px
 		top: 50%
 		+size(8px, 2px)
-		background-color: $text-color-base
+		background-color: $text-color
 		margin-top: -1px
 		z-index: 1
 
@@ -647,7 +647,7 @@ input[type="radio"]
 
 	.select2-results__option--highlighted[aria-selected]
 		background-color: $base-color
-		color: $bg-color-base
+		color: $bg-color
 
 // dropdown
 .select2-dropdown
