--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -162,7 +162,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	transform: translate(-50%, -50%)
 	z-index: 10
 	+font($font-size-h1, $line-height-h1)
-	color: $bg-color-base
+	color: $bg-color
 	text-shadow: 0 5px 20px rgba(0, 0, 0, 0.2)
 	text-align: center
 
@@ -352,7 +352,7 @@ table
 		+font($font-size, $line-height)
 		color: inherit
 		padding: 8px 15px
-		border-color: $text-color-base
+		border-color: $text-color
 
 .table-auto
 	position: relative
@@ -378,7 +378,7 @@ table
 
 		td, th
 			color: $text-color
-			background-color: $bg-color-base
+			background-color: $bg-color
 			border: 0 solid $base-color
 			+font(1.4rem, 1.5)
 
@@ -400,7 +400,7 @@ table
 
 		tbody tr:nth-child(even) td
 			background: $base-color
-			color: $bg-color-base
+			color: $bg-color
 
 		th, thead td
 			+font-bold
@@ -409,7 +409,7 @@ table
 
 		th, thead td, tfoot td
 			background: $base-color
-			color: $bg-color-base
+			color: $bg-color
 			border-color: $base-color
 			border-top-width: 0
 
