--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,11 +20,16 @@
 /*======================================================*/
 /* NORMALIZE AND RESET
 /*======================================================*/
-// normalize
+//=== normalize ===
+///* normalize
 @import ../_temp/normalize/import-now
-// normalize meyer css reset
+///* normalize end
+//=== meyer css reset ===
 //@import base/_reset-meyer.sass
+//=== additional reset ===
 @import base/reset
+@import base/reset-for-normalize
+//@import base/reset-for-meyer
 @import base/oldie
 @import base/nojs
 
