--- a/src/sass/base/_reset.sass
+++ b/src/sass/base/_reset.sass
@@ -1,4 +1,14 @@
-/* reset */
+/* reset
+*, *::after, *::before
+	box-sizing: border-box
+body
+	-webkit-font-smoothing: antialiased
+body, html
+	height: 100%
+	width: 100%
+form
+	margin: 0
+	padding: 0
 //a, input, button,
 //a:focus, input:focus, button:focus
 input, input:focus, textarea, select
@@ -8,62 +18,42 @@ input, input:focus, textarea, select
 //*:focus
 	outline: none
 	-moz-outline: 3px solid white !important
-body
-	-webkit-font-smoothing: antialiased
-body, html
-	height: 100%
-	width: 100%
-select[disabled]
-	cursor: default
-form
-	margin: 0
-	padding: 0
+textarea,
+.select select,
+button,
+input[type="text"],
+input[type="email"],
+input[type="search"],
+input[type="submit"],
+input[type="button"],
+input[type="reset"],
+input[type="number"],
+input[type="range"]
+	//-webkit-appearance: none
+	//-moz-appearance: none
+	appearance: none
+	border-radius: 0
+select
+	&[disabled]
+		cursor: default
+	&::-ms-expand
+		display: none
 input
 	vertical-align: middle
-textarea, .select select, input[type="text"], input[type="email"], input[type="search"], input[type="submit"], input[type="button"], input[type="reset"], button
-	-webkit-appearance: none
-	-moz-appearance: none
-	appearance: none
-	border-radius: 0
-select::-ms-expand
-	display: none
-input[type=radio], input[type=checkbox], select
+	&::-ms-clear
+		display: none
+	&[type="radio"]:focus
+		-moz-outline-radius: 12px !important
+		-moz-outline-offset: 0 !important
+	&[type="checkbox"]:focus
+		-moz-outline-offset: -1px !important
+		-moz-outline: 1px solid #000 !important
+input[type="radio"],
+input[type="checkbox"],
+select
 	cursor: pointer
-textarea, input, button
-	-webkit-appearance: none
-	-moz-appearance: none
-	appearance: none
-	border-radius: 0
-input[type="radio"]:focus
-	-moz-outline-radius: 12px !important
-	-moz-outline-offset: 0 !important
-input[type="checkbox"]:focus
-	-moz-outline-offset: -1px !important
-	-moz-outline: 1px solid #000 !important
-input::-ms-clear
-	display: none
-blockquote, q
-	quotes: none
-blockquote::before, blockquote::after, q::before, q::after
-	content: none
-ins
-	text-decoration: none
-del
-	text-decoration: line-through
-fieldset
-	border: none
-	margin: 0
-	padding: 0
-table
-	border: 0
-	width: 100%
-	padding: 0
-	margin: 0
-ul
-	list-style: none
-	padding: 0
-	margin: 0
-*, *::after, *::before
-	box-sizing: border-box
 
-/* reset end */
+// followed by an additional reset
+// for normalize
+// or
+// for meyer reset
