--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -41,7 +41,7 @@
 @import base/buttons
 /* === BUTTON end ===
 /* === FORM STYLES DEFAULT ===
-@import base/form-elements
+@import forms/forms
 /* === FORM STYLES DEFAULT end ===
 
 /*======================================================*/
