--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -9,6 +9,39 @@
 //$breakpoints: ('mob-sm': 320px, 'mob-md': 480px, 'mob-lg': 640px, 'tab-sm': 768px, 'tab-lg': 992px, 'desk-sm': 1200px, 'desk-md': 1366px, 'desk-lg': 1600px, 'desk-hd': 1920px)
 $breakpoints: ('desk-qhd': 2560px, 'desk-hd': 1920px, 'desk-lg': 1600px, 'desk-ml': 1440px, 'desk-md': 1366px, 'desk-sm': 1200px, 'tab-lg': 992px, 'tab-sm': 768px, 'mob-lg': 640px, 'mob-md': 480px, 'mob-sm': 320px)
 
+// Fonts style
+// ==========================================================================
+$font-norm: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default
+$font-alt: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default
+
+// Reset font-white and font-style
+// Use for font-face
+=font-reset()
+	font:
+		weight: normal
+		style: normal
+
+// Main font
+=font-normal()
+	font-family: $font-norm
+
+=font-bold()
+	font-weight: bold
+
+=font-italic()
+	font-style: italic
+
+=font-bold-italic()
+	font-weight: bold
+	font-style: italic
+
+// Alternative font
+=font-alt()
+	font-family: $font-norm
+
+=font-alt-bold()
+	font-family: $font-norm
+	font-weight: 300
 
 // Base
 // ==========================================================================
@@ -142,16 +175,19 @@ $footer-grid-space: 30px 0 !default // v h
 // Forms
 // ==========================================================================
 
+// List of inputs
+$inputs-list: 'input[type="text"]', 'input[type="password"]', 'input[type="email"]', 'input[type="search"]', 'textarea'
+
 // Colors of forms
 $form-text-color: $text-color !default
-$form-placeholder-color: lighten($form-text-color, 20%) !default
+$form-placeholder-color: lighten($form-text-color, 50%) !default
 $form-bg-color: white !default
-$form-border-color: lightgray !default
+$form-border-color: lighten($form-text-color, 70%) !default
 $form-border-focus-color: darken($form-border-color, 20%) !default
 $form-error-color: red !default
 $form-success-color: lightseagreen !default
 $form-bottom-space: 3rem !default
-$form-bottom-space--sm: 1.5em !default
+$form-bottom-space--mob: 2rem !default
 $form-gap: 40px !default
 
 // Fonts of forms
@@ -159,6 +195,31 @@ $form-font-size: 16px !default
 $form-line-height: 24px !default
 $form-input-height: 50px !default
 $form-letter-spacing: null !default
+
+// @example Sass - Использование
+// @example css - Вывод CSS
+=inputs-font()
+	//+font-alt
+	font-family: inherit
+	font-size: $form-font-size
+	line-height: $form-line-height
+	@if $form-letter-spacing
+		letter-spacing: $form-letter-spacing
+	color: $form-text-color
+
+=selects-font()
+	+inputs-font
+
+	//+media('<mob-lg')
+		font-size: 10px
+
+// Vertical spaces
+=forms-space()
+	margin: 0 0 $form-bottom-space
+
+	+media('<mob-lg')
+		margin: 0 0 $form-bottom-space--mob
+
 
 // Layout of forms
 $form-border-width: 2px !default
@@ -172,10 +233,38 @@ $checkbox-color: #ff3aa3
 
 // Select
 $select-space-v: 12px !default
-$select-space-h: $form-input-space-h !default
 $select-arrow-width: 40px !default
 $select-arrow-height: 100% !default
 $multiple-item-space: 3px
+
+// Style Selection
+=selectSelection()
+	height: $form-input-height
+	width: 100%
+	padding: $form-input-space-vt $select-arrow-width $form-input-space-vb $form-input-space-h
+	background: $form-bg-color
+	border: #{$form-border-width} solid #{$form-border-color}
+	border-radius: 0
+	box-shadow: none
+	text-indent: 0
+	outline: none
+
+// States
+=form-success()
+	color: $form-success-color
+	border-color: $form-success-color
+
+=form-error()
+	color: $form-error-color
+	border-color: $form-error-color
+
+=form-has-value()
+	color: blueviolet
+	border-color: blueviolet
+
+=form-on-focus()
+	//color: $form-border-focus-color
+	border-color: $form-border-focus-color
 
 
 // Buttons
@@ -191,38 +280,3 @@ $btn-disabled-color: #ccc !default
 // ==========================================================================
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
-
-
-// Fonts style
-// ==========================================================================
-$font-norm: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default
-$font-alt: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default
-
-// Reset font-white and font-style
-// Use for font-face
-=font-reset()
-	font:
-		weight: normal
-		style: normal
-
-// Main font
-=font-normal()
-	font-family: $font-norm
-
-=font-bold()
-	font-weight: bold
-
-=font-italic()
-	font-style: italic
-
-=font-bold-italic()
-	font-weight: bold
-	font-style: italic
-
-// Alternative font
-=font-alt()
-	font-family: $font-norm
-
-=font-alt-bold()
-	font-family: $font-norm
-	font-weight: 300
